IMPROVEMENT: "Fix" overflows for menu
Not very clean, but works.

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -12,7 +12,7 @@
 }
 
 html {
-    @apply .h-full;
+    @apply .bg-black .h-full;
     text-rendering: optimizeLegibility !important;
     -webkit-font-smoothing: antialiased !important;
 }
@@ -29,14 +29,14 @@ body {
     @apply .bg-black .text-white;
 }
 
-.page-wrap {
-  @apply .h-full .overflow-y-scroll;
-	-webkit-overflow-scrolling: touch;
-	transition: transform 0.3s;
+html, body, .page-wrap, .page {
+    @apply .overflow-hidden;
 }
 
 .page-wrap {
-    @apply .overflow-hidden;
+  @apply .h-full .overflow-y-auto;
+	-webkit-overflow-scrolling: touch;
+	transition: transform 0.3s;
 }
 
 .page {
